# kitty

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.distributed.yml  main.py
.github/workflows/: ci.yml
csbot/agent/: core.py  llm.py
csbot/hooks/: feedback_hook.py
kitty-runtime/: .env.production.example  .env.sender.example  .env.server.example  .env.worker.example  .gitignore  Dockerfile  README.md  pyproject.toml
kitty-runtime/docs/: architecture.md  csbot-compatibility.md  distributed-deployment.md  event-protocol.md  production-deployment.md  ten-minute-launch.md
kitty-runtime/examples/: __init__.py  echo_hook.py  tools.py
kitty-runtime/kitty/: __init__.py  __main__.py  cli.py  config_file.py  deployment.py  onboarding.py  runtime.py  server.py
kitty-runtime/kitty/agent/: __init__.py  handler.py  loop.py
kitty-runtime/kitty/agent/providers/: __init__.py  base.py  mock.py  openai_compatible.py
kitty-runtime/kitty/channels/: __init__.py  base.py  codec.py  feishu.py  feishu_cards.py
kitty-runtime/kitty/core/: __init__.py  config.py  context.py  events.py
kitty-runtime/kitty/distributed/: __init__.py  config.py  ingress.py  sender.py  worker.py
kitty-runtime/kitty/hooks/: __init__.py  bus.py  loader.py
kitty-runtime/kitty/integrations/: __init__.py  csbot.py
kitty-runtime/kitty/memory/: __init__.py  base.py  file_context.py  postgres_store.py  session_store.py
kitty-runtime/kitty/skills/: __init__.py  loader.py
kitty-runtime/kitty/tools/: __init__.py  executor.py  registry.py  subprocess_runner.py
kitty-runtime/kitty/workers/: __init__.py  manager.py  worker.py
kitty-runtime/scripts/: bootstrap-local.sh
kitty-runtime/tests/: test_deployment.py  test_deployment_and_csbot.py  test_distributed.py  test_events.py  test_feishu_and_server.py  test_feishu_cards.py  test_feishu_images.py  test_hooks.py  test_onboarding.py  test_provider_and_memory.py  test_skills.py  test_tools_and_agent.py  test_workers.py
kitty-runtime/tests/fixtures/: record_hook.py  tool_module.py
