[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kitty-runtime-compat"
version = "0.1.0"
description = "Clean-room Kitty-compatible agent worker runtime inferred from CS-bot integration contracts"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "CS-bot contributors"}]
dependencies = [
  "aiohttp>=3.10,<4",
  "httpx>=0.27,<1",
  "openai>=1.60,<3",
  "pycryptodome>=3.20,<4",
  "python-dotenv>=1,<2",
  "PyYAML>=6,<7",
  "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
kitty = "kitty.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kitty*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
