[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kitty-feishu-runtime"
version = "0.3.0"
description = "Production-oriented Feishu bot runtime with durable delivery and session workers"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Kitty contributors"}]
dependencies = [
  "pycryptodome>=3.20,<4",
  "uvicorn>=0.30,<1",
  "psycopg[binary]>=3.2,<4",
  "psycopg-pool>=3.2,<4",
]

[project.scripts]
kitty = "kitty.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kitty*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
